--- a/glossary.html
+++ b/glossary.html
@@ -9,11 +9,30 @@ title: Glossary
         <div class="sidebar-content">
             <div class="menu xs-p2">
                 <h1 class="xs-text-left">{{page.title}}</h1>
+                <div class="xs-text-2 xs-p1 xs-m1">Term</div>
+                <div class="xs-text-2 xs-p1 xs-m1">Term</div>
+                <div class="xs-text-2 xs-p1 xs-m1">Term</div>
+                <div class="xs-text-2 xs-p1 xs-m1">Term</div>
             </div>
         </div>
     </div>
     <div class="sidebar-page-content-outer xs-col-12 sm-col-9 lg-col-10 sm-offset-3 lg-offset-2 xs-pt4  xs-pl4 xs-pr4 xs-overflow-scroll">
-        <div class="sidebar-page-content fill-white">
+        <div class="sidebar-page-content fill-white xs-p3">
+            <h1 class="baloo">Term</h1>
+            <hr>
+            <div class="lg-text-2">
+                <p class="xs-mb1">Here is where the definition goes. It should probaly be more of an explanation with liks to other terms instead of just a couple of senteces aboutterm.</p>
+
+                <p class="xs-mb1">In the future, it will probably be super useful to host a YouTube video here with someone actually breaking down the term and whatnot. But that's a phase II feature.</p>
+
+                <p class="xs-mb1">
+                    <img src="http://placekitten.com/200/200"/>
+                </p>
+
+                <p class="xs-mb1">
+                    n.b. we can include images
+                </p>
+            </div>
         </div>
     </div>
 </div>
