landing page => home page

--- a/glossary.html
+++ b/glossary.html
@@ -5,7 +5,7 @@ title: Glossary
 
 <div class="glossary-container">
     <div class="sidebar-outer xs-col-12 sm-col-3 lg-col-2 sm-fixed xs-t0 sm-b0 xs-l0 sm-py3 sm-border-bottom-none sm-border-right fill-white solid-nav">
-        <a href="/home"><div class="sidebar-logo"></div></a>
+        <a href="/"><div class="sidebar-logo"></div></a>
         <div class="sidebar-content">
             <div class="menu xs-p2">
                 <h1 class="xs-text-left">{{page.title}}</h1>
