--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 ---
-layout: landing
+layout: default
 ---
 
 {% include partials/header.html %}
 
-{{content}}
+
+<div class="content-block md-p3 sm-p0 sm-pt1 xs-p0 xs-pt1">
+    <h1 class="xs-text-center xs-p1 xs-pb2">Through the System</h1>
+    <div class="card slideshow">
+        <div class="slideshow--image">1</div>
+        <div class="slideshow--image">2</div>
+        <div class="slideshow--image">3</div>
+    </div>
+</div>
