--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@ layout: default
 
 <div class="content-block md-p3 sm-p0 sm-pt1 xs-p0 xs-pt1">
     <h1 class="xs-text-center xs-p1 xs-pb2">Through the System</h1>
-    <div class="card slideshow">
-        <div class="slideshow--image">1</div>
-        <div class="slideshow--image">2</div>
-        <div class="slideshow--image">3</div>
+    <a href="/play">
+        <div class="card slideshow">
+            <div class="slideshow--image" id="one"></div>
+            <div class="slideshow--image" id="two"></div>
+            <div class="slideshow--image" id="three"></div>
+        </div>
+    </a>
+    <div class="card md-p2 xs-p1 sm-mt2">
+        <p>
+        Through the system walk you through... We need copy. <a href="/play">Play Now.</a>
+        </p>
     </div>
 </div>
