modify glossary layout

--- a/glossary.html
+++ b/glossary.html
@@ -3,9 +3,11 @@ layout: default
 title: Glossary
 ---
 
+
+{% include partials/header.html %}
+
 <div class="glossary-container">
-    <div class="sidebar-outer xs-col-12 sm-col-3 lg-col-2 sm-fixed xs-t0 sm-b0 xs-l0 sm-py3 sm-border-bottom-none sm-border-right fill-white solid-nav">
-        <a href="/"><div class="sidebar-logo"></div></a>
+    <div class="sidebar-outer xs-col-12 sm-col-3 lg-col-2 sm-fixed xs-b0 sm-b0 xs-l0 sm-py3 sm-border-bottom-none sm-border-right fill-white solid-nav">
         <div class="sidebar-content">
             <div class="menu xs-p2">
                 <h1 class="xs-text-left">{{page.title}}</h1>
