initial experiments with responsiveness at smaller scale

--- a/glossary.html
+++ b/glossary.html
@@ -7,7 +7,7 @@ title: Glossary
 {% include partials/header.html %}
 
 <div class="glossary-container">
-    <div class="sidebar-outer xs-col-12 sm-col-3 lg-col-2 sm-fixed xs-b0 sm-b0 xs-l0 sm-py3 sm-border-bottom-none sm-border-right fill-white solid-nav">
+    <div class="sidebar-outer xs-col-12 sm-col-3 lg-col-2 sm-fixed xs-b0 sm-b0 xs-l0 sm-py 3sm-border-bottom sm-border-right fill-white solid-nav">
         <div class="sidebar-content">
             <div class="menu xs-p2">
                 <h1 class="xs-text-left">{{page.title}}</h1>
@@ -18,8 +18,8 @@ title: Glossary
             </div>
         </div>
     </div>
-    <div class="sidebar-page-content-outer xs-col-12 sm-col-9 lg-col-10 sm-offset-3 lg-offset-2 xs-pt4  xs-pl4 xs-pr4 xs-overflow-scroll">
-        <div class="sidebar-page-content fill-white xs-p3">
+    <div class="sidebar-page-content-outer xs-col-12 sm-col-9 lg-col-10 sm-offset-3 lg-offset-2 sm-p4 xs-p1 xs-overflow-scroll">
+        <div class="sidebar-page-content fill-white md-p3 xs-p1">
             <h1 class="baloo">Term</h1>
             <hr>
             <div class="lg-text-2">
