--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 {% include partials/header.html %}
 
 
-<div class="content-block md-p3 sm-p0 sm-pt1 xs-p0 xs-pt1">
+<div class="content-block sm-p3 sm-pt1 xs-p0 xs-pt1">
     <h1 class="xs-text-center xs-p1 xs-pb2">Through the System</h1>
     <a href="/play">
         <div class="card slideshow">
