--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@ layout: default
 
 
 <div class="content-block sm-p3 sm-pt1 xs-p0 xs-pt1">
-    <h1 class="xs-text-center xs-p1 xs-pb2">Through the System</h1>
     <a href="/play">
         <div class="card slideshow">
             <div class="slideshow--image" id="one"></div>
@@ -16,7 +15,7 @@ layout: default
     </a>
     <div class="card md-p2 xs-p1 sm-mt2">
         <p>
-        Through the system walk you through... We need copy. <a href="/play">Play Now.</a>
+        <b>Through the System</b> is an interative walkthrough... We need copy. <a href="/play">Play Now.</a>
         </p>
     </div>
 </div>
