experimenting with fixed header, need to resolve the use of the $header-height offset. too distributed at this moment

--- a/glossary.html
+++ b/glossary.html
@@ -8,7 +8,7 @@ title: Glossary
 
 <div class="glossary-container">
     <div class="sidebar-outer xs-col-12 sm-col-3 lg-col-2 sm-fixed xs-b0 sm-b0 xs-l0 sm-py 3sm-border-bottom sm-border-right fill-white solid-nav">
-        <div class="sidebar-content">
+        <div class="sidebar-content arvo">
             <div class="menu xs-p2">
                 <h1 class="xs-text-left">{{page.title}}</h1>
                 <div class="xs-text-2 xs-p1 xs-m1">Term</div>
@@ -19,8 +19,8 @@ title: Glossary
         </div>
     </div>
     <div class="sidebar-page-content-outer xs-col-12 sm-col-9 lg-col-10 sm-offset-3 lg-offset-2 sm-p4 xs-p1 xs-overflow-scroll">
-        <div class="sidebar-page-content fill-white md-p3 xs-p1">
-            <h1 class="baloo">Term</h1>
+        <div class="sidebar-page-content fill-white md-p3 xs-p1 arvo">
+            <h1>Term</h1>
             <hr>
             <div class="lg-text-2">
                 <p class="xs-mb1">Here is where the definition goes. It should probaly be more of an explanation with liks to other terms instead of just a couple of senteces aboutterm.</p>
