--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@ layout: default
 
 {% include partials/header.html %}
 
-
-<a href="/play">
-    <div class="card slideshow">
+<div class="card slideshow">
+    <a href="/play">
         <div class="slideshow--image" id="one"></div>
         <div class="slideshow--image" id="two"></div>
         <div class="slideshow--image" id="three"></div>
-    </div>
-</a>
-<div class="content-block sm-p3 sm-pt1 xs-p0 xs-pt1">
-    <div class="card md-p2 xs-p1 sm-mt2">
+    </a>
+</div>
+<div class="content-block sm-p3 sm-pt1 xs-p0 xs-pt1 arvo">
+    <div class="xs-text-center">
+        <div class="xs-text-1">Through the System</div>
+        <p class="">
+            An interative walkthrough... We need copy.
+        </p>
         <p>
-        <b>Through the System</b> is an interative walkthrough... We need copy. <a href="/play">Play Now.</a>
+            <a href="/play">Play Now.</a>
         </p>
     </div>
 </div>
