adjust post directory structure

--- a/glossary.html
+++ b/glossary.html
@@ -1,40 +1,8 @@
 ---
-layout: default
+layout: glossary
 title: Glossary
+category: glossary
 ---
 
-
-{% include partials/header.html %}
-
-<div class="glossary-container">
-    <div class="sidebar-outer xs-col-12 sm-col-3 lg-col-2 sm-fixed xs-b0 sm-b0 xs-l0 sm-py 3sm-border-bottom sm-border-right fill-white solid-nav">
-        <div class="sidebar-content arvo">
-            <div class="menu xs-p2">
-                <h1 class="xs-text-left">{{page.title}}</h1>
-                <div class="xs-text-2 xs-p1 xs-m1">Term</div>
-                <div class="xs-text-2 xs-p1 xs-m1">Term</div>
-                <div class="xs-text-2 xs-p1 xs-m1">Term</div>
-                <div class="xs-text-2 xs-p1 xs-m1">Term</div>
-            </div>
-        </div>
-    </div>
-    <div class="sidebar-page-content-outer xs-col-12 sm-col-9 lg-col-10 sm-offset-3 lg-offset-2 sm-p4 xs-p1 xs-overflow-scroll">
-        <div class="sidebar-page-content fill-white md-p3 xs-p1 arvo">
-            <h1>Term</h1>
-            <hr>
-            <div class="lg-text-2">
-                <p class="xs-mb1">Here is where the definition goes. It should probaly be more of an explanation with liks to other terms instead of just a couple of senteces aboutterm.</p>
-
-                <p class="xs-mb1">In the future, it will probably be super useful to host a YouTube video here with someone actually breaking down the term and whatnot. But that's a phase II feature.</p>
-
-                <p class="xs-mb1">
-                    <img src="http://placekitten.com/200/200"/>
-                </p>
-
-                <p class="xs-mb1">
-                    n.b. we can include images
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+# The Glossary
+You can find some terms and definitions here.
