a whole buncha glossary terms

--- a/glossary.html
+++ b/glossary.html
@@ -4,5 +4,16 @@ title: Glossary
 category: glossary
 ---
 
-# The Glossary
-You can find some terms and definitions here.
+<h1>Vocabulary Matters!</h1>
+<br />
+<p>
+    The Justice System is full of confusing terms and big words that can make finding your way quite hard!
+</p>
+<br />
+<p>
+    This Glossary attempts to define some of this legal vocabulary in plain language. Should you ever become involved in the Justice System, this knowledge will help you understand what's going on and what you can do to help your case.
+</p>
+<br />
+<p>
+    <em>Select a term from the left to read more about it!</em>
+</p>
