--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ layout: default
 </a>
 <div class="content-block sm-p3 sm-pt1 xs-p0 xs-pt1 arvo">
     <div class="xs-text-center">
-        <div class="xs-text-1">Through the System</div>
+        <div class="xs-text-1">Julie Through the System</div>
         <p class="">
-            An interative walkthrough... We need copy.
+            A Choose-Your-Own Adventure exploring the Juvenile Justice System
         </p>
         <p>
             <a href="/play">Play Now.</a>
